--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container container-ex1">
       <div class="row">
         <div class="col-12">Colonne 1</div>
       </div>
@@ -29,6 +29,37 @@
         <div class="col-3">Colonne 9</div>
         <div class="col-6">Colonne 10</div>
         <div class="col-3">Colonne 11</div>
+      </div>
+    </div>
+    <div class="container container-ex2">
+      <div class="row">
+        <div class="col-2">Colonne 1</div>
+        <div class="col-8">Colonne 2</div>
+        <div class="col-2">Colonne 3</div>
+      </div>
+      <div class="row">
+        <div class="col-6">Colonne 4</div>
+        <div class="col-6">Colonne 5</div>
+      </div>
+      <div class="row">
+        <div class="col-4">Colonne 6</div>
+        <div class="col-4">Colonne 7</div>
+        <div class="col-4">Colonne 8</div>
+      </div>
+      <div class="row">
+        <div class="col-12">Colonne 9</div>
+      </div>
+      <div class="row">
+        <div class="col-5">Colonne 10</div>
+        <div class="col-7">Colonne 11</div>
+      </div>
+      <div class="row">
+        <div class="col-2">Colonne 12</div>
+        <div class="col-2">Colonne 13</div>
+        <div class="col-2">Colonne 14</div>
+        <div class="col-2">Colonne 15</div>
+        <div class="col-2">Colonne 16</div>
+        <div class="col-2">Colonne 17</div>
       </div>
     </div>
   </body>
